Development
    Add in the code to try and fetch the cover art url from musicbrainz
    Put some fixes in for the thumbnail support
    Add in support for compiling with libmusicbrainz, is not used yet
    Add in support for reading in iPod artwork, still not displayed
    Fix operation of Open Recent Menu
    Allow user to edit the Audio and Subtitle preferred languages and keep the setting in the gui
    Updated french translation
    Don't save the window location and size if window is fullscreen when app quits
    Add preference key of 'disable_animation' that disables the fullscreen animation
    Updated serbian translation
    Rework configure.in to make it work better with optional features
    Fix playlist load after saving
    Add Open iPod to file menu when we have libgpod support
    When playlist is active, wire arrow and page keys to the list and not to mplayer
    Remember window size, in addition to location when preference set
    Change column definitions in playlist so that it works a little better
    Add new command line option --load_tracks_from_gpod, makes loading a track list from ipod super fast
    Add in support for libgpod-1.0 into autoconf scripts
    Fix infinite loop when opening garbage file
    Fix crash when opening a file that is not playable
0.9.1
    Fix playlist hide on fullscreen
    Updated fr translation
    Fix compile issues on glib < 2.16
    Fix autoconf for gio
    Updated po translation
0.9.0
    Add preference key (no gui) to disable the processing of the media keys
    Fix problem with absolute playlist items
    Fix problem with playlist detection and parsing in non-gio mode
    Fix problems with patches from MonkeySage
    Updated patch from MonkeySage
    Apply support-relative-paths patch from MonkeySage
    Fix up a couple of crashes when gconf is not enabled
    Read ALSA volume and use it, only when alsa is the vo, on pulse this patch makes audio very quiet.
    Rework, volume setting preference