@@ -189,6 +189,8 @@ enum {
     LENGTH_COLUMN,
     SUBTITLE_COLUMN,
 	COVERART_COLUMN,
+	AUDIO_CODEC_COLUMN,
+	VIDEO_CODEC_COLUMN,
     N_COLUMNS
 };
 
